// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TranscriptionStatusBadge > matches snapshot for status "cancelled" 1`] = `
<div
  aria-label="Cancelada"
  class="inline-flex items-center rounded-full border border-transparent px-2.5 py-0.5 text-xs font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 bg-warning-50 text-warning-700 gap-1"
  data-status="cancelled"
  data-testid="transcription-status-badge"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-triangle-alert h-3.5 w-3.5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
    />
    <path
      d="M12 9v4"
    />
    <path
      d="M12 17h.01"
    />
  </svg>
  Cancelada
</div>
`;

exports[`TranscriptionStatusBadge > matches snapshot for status "failed" 1`] = `
<div
  aria-label="Falhou"
  class="inline-flex items-center rounded-full border border-transparent px-2.5 py-0.5 text-xs font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 bg-danger-50 text-danger-700 gap-1"
  data-status="failed"
  data-testid="transcription-status-badge"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-alert h-3.5 w-3.5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  Falhou
</div>
`;

exports[`TranscriptionStatusBadge > matches snapshot for status "generating" 1`] = `
<div
  aria-label="Processando"
  class="inline-flex items-center rounded-full border border-transparent px-2.5 py-0.5 text-xs font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 bg-surface-muted text-text-secondary gap-1"
  data-status="generating"
  data-testid="transcription-status-badge"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-loader-circle h-3.5 w-3.5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
  Processando
</div>
`;

exports[`TranscriptionStatusBadge > matches snapshot for status "pending" 1`] = `
<div
  aria-label="Processando"
  class="inline-flex items-center rounded-full border border-transparent px-2.5 py-0.5 text-xs font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 bg-surface-muted text-text-secondary gap-1"
  data-status="pending"
  data-testid="transcription-status-badge"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-loader-circle h-3.5 w-3.5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
  Processando
</div>
`;

exports[`TranscriptionStatusBadge > matches snapshot for status "ready" 1`] = `
<div
  aria-label="Pronta para revisão"
  class="inline-flex items-center rounded-full border border-transparent px-2.5 py-0.5 text-xs font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 bg-info-50 text-info-700 gap-1"
  data-status="ready"
  data-testid="transcription-status-badge"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-info h-3.5 w-3.5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M12 16v-4"
    />
    <path
      d="M12 8h.01"
    />
  </svg>
  Pronta para revisão
</div>
`;

exports[`TranscriptionStatusBadge > matches snapshot for status "reviewed" 1`] = `
<div
  aria-label="Salva no prontuário"
  class="inline-flex items-center rounded-full border border-transparent px-2.5 py-0.5 text-xs font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 bg-success-50 text-success-700 gap-1"
  data-status="reviewed"
  data-testid="transcription-status-badge"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-check h-3.5 w-3.5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="m9 12 2 2 4-4"
    />
  </svg>
  Salva no prontuário
</div>
`;

exports[`TranscriptionStatusBadge > matches snapshot for status "transcribing" 1`] = `
<div
  aria-label="Processando"
  class="inline-flex items-center rounded-full border border-transparent px-2.5 py-0.5 text-xs font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-brand-500 focus:ring-offset-2 bg-surface-muted text-text-secondary gap-1"
  data-status="transcribing"
  data-testid="transcription-status-badge"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-loader-circle h-3.5 w-3.5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
  Processando
</div>
`;
